--- a/caption2.html
+++ b/caption2.html
@@ -41,8 +41,8 @@
 
                 <figure id="site">
                     <div id="picture">
-                        <a href="#"><img src="img/catcafe_01.png" alt="FUKUOKA CAT CAFE(架空サイト)"></a><br><br>
-                        <a href="#">https://</a>
+                        <a href="https://testtsug.github.io/catcafe/"><img src="img/catcafe_01.png" alt="FUKUOKA CAT CAFE(架空サイト)"></a><br><br>
+                        <a href="https://testtsug.github.io/catcafe/">https://testtsug.github.io/catcafe/</a>
                     </div>
                     
                     <figcaption>
