--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <figcaption>
                         <h2><img src="img/name.png" alt="T.Sugimoto"></h2>
                         <p>職業訓練校で5ヶ月間、Web制作を学びました。<br>
-                            Web業界は未経験ですが、日々勉強を積みながら、<br>
+                            Web業界は未経験ですが、日々勉強を積みながら、
                             見る人が興味を惹かれるサイト、分かりやすく操作しやすいサイト、
                             売り上げを上げたい、商品を知ってもらいたい等の目的を達成できるサイト制作をしていきたいと思っています。</p>
                     </figcaption>
