--- a/caption3.html
+++ b/caption3.html
@@ -41,8 +41,8 @@
 
                 <figure id="site">
                     <div id="picture">
-                        <a href="#"><img src="img/ohavege_01.png" alt="OHAVEGE(架空サイト)"></a><br><br>
-                        <a href="#">https://</a>
+                        <a href="#" target="_blank" rel="noopener noreferrer"><img src="img/ohavege_01.png" alt="OHAVEGE(架空サイト)"></a><br><br>
+                        <a href="#" target="_blank" rel="noopener noreferrer">https://</a>
                     </div>
 
                     <figcaption>
