--- a/caption1.html
+++ b/caption1.html
@@ -41,8 +41,8 @@
 
                 <figure id="site">
                     <div id="picture">
-                        <a href="https://testtsug.github.io/st/index.html"><img src="img/umakadou_01.png" alt="うまか堂(架空サイト)"></a><br><br>
-                        <a href="https://testtsug.github.io/st/index.html">https://testtsug.github.io/st/index.html</a>
+                        <a href="https://testtsug.github.io/st/index.html" target="_blank" rel="noopener noreferrer"><img src="img/umakadou_01.png" alt="うまか堂(架空サイト)"></a><br><br>
+                        <a href="https://testtsug.github.io/st/index.html" target="_blank" rel="noopener noreferrer">https://testtsug.github.io/st/index.html</a>
                     </div>
 
                     <figcaption>
