--- a/caption5.html
+++ b/caption5.html
@@ -41,8 +41,8 @@
 
                 <figure id="site">
                    <div id="picture">
-                       <a href="#"><img src="img/bakery_01.png" alt="Yamada Bakery(架空サイト)"></a><br><br>
-                       <a href="#">https://</a>
+                       <a href="#" target="_blank" rel="noopener noreferrer"><img src="img/bakery_01.png" alt="Yamada Bakery(架空サイト)"></a><br><br>
+                       <a href="#" target="_blank" rel="noopener noreferrer">https://</a>
                    </div>
                     <figcaption>
                         <h2>Yamada Bakery(架空サイト)</h2>
