--- a/caption4.html
+++ b/caption4.html
@@ -42,7 +42,7 @@
                 <figure id="site">
                    <div id="picture">
                        <a href="https://testtsug.github.io/yururi/" target="_blank" rel="noopener noreferrer"><img src="img/yururi.png" alt="古民家宿ゆるり(架空サイト)"></a><br><br>
-                       <a href="https://testtsug.github.io/yururi/" target="_blank" rel="noopener noreferrer">https://</a>
+                       <a href="https://testtsug.github.io/yururi/" target="_blank" rel="noopener noreferrer">https://testtsug.github.io/yururi/</a>
                    </div>
                     <figcaption>
                         <h2>古民家宿ゆるり(架空サイト)</h2>
