--- a/caption5.html
+++ b/caption5.html
@@ -41,8 +41,8 @@
 
                 <figure id="site">
                    <div id="picture">
-                       <a href="#" target="_blank" rel="noopener noreferrer"><img src="img/bakery_01.png" alt="Yamada Bakery(架空サイト)"></a><br><br>
-                       <a href="#" target="_blank" rel="noopener noreferrer">https://</a>
+                       <a href="https://testtsug.github.io/bread/" target="_blank" rel="noopener noreferrer"><img src="img/bakery_01.png" alt="Yamada Bakery(架空サイト)"></a><br><br>
+                       <a href="https://testtsug.github.io/bread/" target="_blank" rel="noopener noreferrer">https://testtsug.github.io/bread/</a>
                    </div>
                     <figcaption>
                         <h2>Yamada Bakery(架空サイト)</h2>
@@ -50,7 +50,8 @@
                             <br>
 
                             制作期間:約3日<br>
-                            
+                            食卓にパンがある生活を、というコンセプトで普段パンをあまり食べない方にもおいしいパンを届けたいというパン屋をイメージして制作しました。
+                            クラフト紙のようなテクスチャを使用し、お店で実際にパンを手に取っているようなイメージのサイトになるよう心掛けました。
 
                         </p>
                     </figcaption>
